examples/bad/4_3_types.pp
int main() {
    int x;
    int x; // error
}
